Fixed error overflow on webkit

--- a/src/app/styles/text-input.module.css
+++ b/src/app/styles/text-input.module.css
@@ -13,6 +13,7 @@
     padding-left: 8px;
     box-sizing: border-box;
     filter: drop-shadow(0px 5px 0.75rem #424242);
+    overflow: visible;
 }
 
 .input:focus {
@@ -25,9 +26,9 @@
     font-family: inherit;
     font-size: 16px;
     font-style: italic;
-    overflow: visible;
     color: #6e6e6e;
     opacity: 40%;
+    overflow: visible;
 }
 
 
@@ -42,6 +43,7 @@
     padding-left: 8px;
     box-sizing: border-box;
     filter: drop-shadow(0px 5px 0.75rem #ab0000);
+    overflow: visible;
 }
 
 .input-error:focus {
@@ -54,7 +56,9 @@
     font-family: inherit;
     font-size: 16px;
     font-style: italic;
-    color: #ffa4a4;
+    color: #fc7070;
+    opacity: 40%;
+    overflow: visible;
 }
 
 .error {
